...
              reminder: reminder,
              reminderService: reminderService,
            ),
      );
    } else {
      reminderService.completeReminder(reminder);
      FloatingPill.success(context, 'Completed', color: reminder.color);
    }
  }

  void _showSettingsDialog(
    BuildContext context,
    Reminder reminder,
...
